optimized selecting of words for games